--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <resources>
     <string name="app_name">The Weather</string>
 
+    <string name="common.ok">OK</string>
+    <string name="common.cancel">Cancel</string>
+    <string name="common.back">Back</string>
+    <string name="common.error">Error</string>
+    <string name="common.network.error">Internet Error</string>
+    <string name="common.loading">Loading&#8230;</string>
+    <string name="common.validator.required_field">This field is required</string>
 
+    <string name="choose.cities.empty">Please choose at least a city.</string>
 </resources>
