--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,16 @@
     <string name="common.ok">OK</string>
     <string name="common.cancel">Cancel</string>
     <string name="common.back">Back</string>
+    <string name="common.oops">Oops</string>
     <string name="common.error">Error</string>
-    <string name="common.network.error">Internet Error</string>
+    <string name="common.network.error">There is no Internet. Please check your connection</string>
     <string name="common.loading">Loading&#8230;</string>
-    <string name="common.validator.required_field">This field is required</string>
-    <string name="common.error.message">There is an error occurred. Please try again.</string>
 
+    <string name="common.error.message">There is an error occurred. Please try again.</string>
     <string name="choose.cities.empty">Please choose at least a city.</string>
-    <string name="update.error">There is an error occurred. Please try again.</string>
+    <string name="update.error">Your operation has been un-executed. Please try again later.</string>
+
+    <string name="humidity">Humidity</string>
+    <string name="wind">Wind</string>
+    <string name="feels_like">Feels like</string>
 </resources>
